@@ -205,15 +205,15 @@ Map::Vertex PathManager::GetPathNodeCoordinates(int NodeNumber, bool BestZ)
 
 }
 
-std::list<int> PathManager::FindRoute(int startID, int endID)
+std::vector<int> PathManager::FindRoute(int startID, int endID)
 {
 	_log(PATHING__DEBUG, "FindRoute from node %i to %i", startID, endID);
 
 	memset(ClosedListFlag, 0, sizeof(int) * Head.PathNodeCount);
 
-	std::list<AStarNode> OpenList, ClosedList;
+	std::vector<AStarNode> OpenList, ClosedList;
 
-	std::list<int>Route;
+	std::vector<int>Route;
 
 	AStarNode AStarEntry, CurrentNode;
 
@@ -235,7 +235,7 @@ std::list<int> PathManager::FindRoute(int startID, int endID)
 
 		ClosedListFlag[CurrentNode.PathNodeID] = true;
 
-		OpenList.pop_front();
+		OpenList.erase(OpenList.begin());
 
 		for(int i = 0; i < PATHNODENEIGHBOURS; ++i)
 		{
@@ -251,7 +251,7 @@ std::list<int> PathManager::FindRoute(int startID, int endID)
 
 				Route.push_back(endID);
 
-				std::list<AStarNode>::iterator RouteIterator;
+				std::vector<AStarNode>::iterator RouteIterator;
 
 				while(CurrentNode.PathNodeID != startID)
 				{
@@ -300,7 +300,7 @@ std::list<int> PathManager::FindRoute(int startID, int endID)
 
 			bool AlreadyInOpenList = false;
 
-			std::list<AStarNode>::iterator OpenListIterator, InsertionPoint = OpenList.end();
+			std::vector<AStarNode>::iterator OpenListIterator, InsertionPoint = OpenList.end();
 
 			for(OpenListIterator = OpenList.begin(); OpenListIterator != OpenList.end(); ++OpenListIterator)
 			{
@@ -350,11 +350,11 @@ bool SortPathNodesByDistance(PathNodeSortStruct n1, PathNodeSortStruct n2)
 	return n1.Distance < n2.Distance;
 }
 
-std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
+std::vector<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 {
 	_log(PATHING__DEBUG, "FindRoute(%8.3f, %8.3f, %8.3f, %8.3f, %8.3f, %8.3f)", Start.x, Start.y, Start.z, End.x, End.y, End.z);
 
-	std::list<int> noderoute;
+	std::vector<int> noderoute;
 
 	float CandidateNodeRangeXY = RuleR(Pathing, CandidateNodeRangeXY);
 
@@ -365,7 +365,7 @@ std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 	//
 	int ClosestPathNodeToStart = -1;
 
-	std::list<PathNodeSortStruct> SortedByDistance;
+	std::vector<PathNodeSortStruct> SortedByDistance;
 
 	PathNodeSortStruct TempNode;
 
@@ -382,9 +382,9 @@ std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 		}
 	}
 
-	SortedByDistance.sort(SortPathNodesByDistance);
+	std::sort(SortedByDistance.begin(), SortedByDistance.end(), SortPathNodesByDistance);
 
-	for(std::list<PathNodeSortStruct>::iterator Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
+	for(auto Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
 	{
 		_log(PATHING__DEBUG, "Checking Reachability of Node %i from Start Position.", PathNodes[(*Iterator).id].id);
 
@@ -420,9 +420,9 @@ std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 		}
 	}
 
-	SortedByDistance.sort(SortPathNodesByDistance);
+	std::sort(SortedByDistance.begin(), SortedByDistance.end(), SortPathNodesByDistance);
 
-	for(std::list<PathNodeSortStruct>::iterator Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
+	for(auto Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
 	{
 		_log(PATHING__DEBUG, "Checking Reachability of Node %i from End Position.", PathNodes[(*Iterator).id].id);
 		_log(PATHING__DEBUG, " (%8.3f, %8.3f, %8.3f) to (%8.3f, %8.3f, %8.3f)",
@@ -456,7 +456,7 @@ std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 	{
 		int CulledNodes = 0;
 
-		std::list<int>::iterator First, Second;
+		std::vector<int>::iterator First, Second;
 
 		while((noderoute.size() >= 2) && (CulledNodes < NodesToAttemptToCull))
 		{
@@ -487,7 +487,7 @@ std::list<int> PathManager::FindRoute(Map::Vertex Start, Map::Vertex End)
 	{
 		int CulledNodes = 0;
 
-		std::list<int>::iterator First, Second;
+		std::vector<int>::iterator First, Second;
 
 		while((noderoute.size() >= 2) && (CulledNodes < NodesToAttemptToCull))
 		{
@@ -611,7 +611,7 @@ void PathManager::MeshTest()
 			if(j == i)
 				continue;
 
-			std::list<int> Route = FindRoute(PathNodes[i].id, PathNodes[j].id);
+			std::vector<int> Route = FindRoute(PathNodes[i].id, PathNodes[j].id);
 
 			if(Route.size() == 0)
 			{
@@ -638,7 +638,7 @@ void PathManager::SimpleMeshTest()
 
 	for(uint32 j = 1; j < Head.PathNodeCount; ++j)
 	{
-		std::list<int> Route = FindRoute(PathNodes[0].id, PathNodes[j].id);
+		std::vector<int> Route = FindRoute(PathNodes[0].id, PathNodes[j].id);
 
 		if(Route.size() == 0)
 		{
@@ -695,7 +695,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 			}
 			NodeLoc = zone->pathing->GetPathNodeCoordinates(Route.front());
 
-			Route.pop_front();
+			Route.erase(Route.begin());
 
 			++PathingTraversedNodes;
 
@@ -784,7 +784,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 				}
 				// We are on the same route, no LOS (or not checking this time, so pop off the node we just reached
 				//
-				Route.pop_front();
+				Route.erase(Route.begin());
 
 				++PathingTraversedNodes;
 
@@ -798,7 +798,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 					if(NextNode == -1)
 					{
 						// -1 indicates a teleport to the next node
-						Route.pop_front();
+						Route.erase(Route.begin());
 
 						if(Route.size() == 0)
 						{
@@ -814,7 +814,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 
 						mlog(PATHING__DEBUG, "  TELEPORTED to %8.3f, %8.3f, %8.3f\n", NodeLoc.x, NodeLoc.y, NodeLoc.z);
 
-						Route.pop_front();
+						Route.erase(Route.begin());
 
 						if(Route.size() == 0)
 							return To;
@@ -962,7 +962,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 
 					PathingLastNodeVisited = Route.front();
 
-					Route.pop_front();
+					Route.erase(Route.begin());
 
 					++PathingTraversedNodes;
 
@@ -975,7 +975,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 						if(NextNode == -1)
 						{
 							// -1 indicates a teleport to the next node
-							Route.pop_front();
+							Route.erase(Route.begin());
 
 							if(Route.size() == 0)
 							{
@@ -991,7 +991,7 @@ Map::Vertex Mob::UpdatePath(float ToX, float ToY, float ToZ, float Speed, bool &
 
 							mlog(PATHING__DEBUG, "  TELEPORTED to %8.3f, %8.3f, %8.3f\n", NodeLoc.x, NodeLoc.y, NodeLoc.z);
 
-							Route.pop_front();
+							Route.erase(Route.begin());
 
 							if(Route.size() == 0)
 								return To;
@@ -1103,7 +1103,7 @@ int PathManager::FindNearestPathNode(Map::Vertex Position)
 
 	int ClosestPathNodeToStart = -1;
 
-	std::list<PathNodeSortStruct> SortedByDistance;
+	std::vector<PathNodeSortStruct> SortedByDistance;
 
 	PathNodeSortStruct TempNode;
 
@@ -1120,9 +1120,9 @@ int PathManager::FindNearestPathNode(Map::Vertex Position)
 		}
 	}
 
-	SortedByDistance.sort(SortPathNodesByDistance);
+	std::sort(SortedByDistance.begin(), SortedByDistance.end(), SortPathNodesByDistance);
 
-	for(std::list<PathNodeSortStruct>::iterator Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
+	for(auto Iterator = SortedByDistance.begin(); Iterator != SortedByDistance.end(); ++Iterator)
 	{
 		_log(PATHING__DEBUG, "Checking Reachability of Node %i from Start Position.", PathNodes[(*Iterator).id].id);
 
@@ -1262,9 +1262,7 @@ void Mob::PrintRoute()
 
 	printf("Route is : ");
 
-	std::list<int>::iterator Iterator;
-
-	for(Iterator = Route.begin(); Iterator !=Route.end(); ++Iterator)
+	for(auto Iterator = Route.begin(); Iterator !=Route.end(); ++Iterator)
 	{
 		printf("%i, ", (*Iterator));
 	}
