@@ -1,6 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
-== 11/24/2014 ==
+== 12/17/2014 ==
+demonstar55: Use vectors for route stuff, should be more CPU cache friendly so faster
+
 Trevius: Spells that modify model size are now limited to 2 size adjustments from the base size.
 Trevius: Fix to prevent Mercenaries from being set as Group Leader.
 
